--- a/index.html
+++ b/index.html
@@ -9,24 +9,29 @@
     <link rel="stylesheet" href="style.css">
 
   </head>
-  <body>
-    <header>
-      <h1>Password Generator</h1>
-    </header>
-
-    <h2>Generate a Password</h2>
+  <body></body>
 
     <div class = "wrapper">
+
+      <h1>Password Generator</h1>
+
+      <h2>Generate a Password</h2>
+
       <textarea
       readonly
       id="password"
       placeholder="Your Secure Password"
       aria-label="Generated Password"></textarea>
-    <br>
-      <button id="generate">Generate Password</button>
-      <button id="copy">
-        Copy to Clipboard
-      </button>
+
+      <br>
+
+      <div id = "button-block">
+        <button id="generate">Generate Password</button>
+        <button id="copy">
+          Copy to Clipboard
+        </button>
+      </div>
+
     </div>
 
     <script src = "script.js"></script>
